--- a/src/App.css
+++ b/src/App.css
@@ -4,39 +4,57 @@
 @tailwind utilities;
 
 main {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    padding: 0 8px 8px 8px;
-    height: 100%;
-    gap: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  padding: 0 8px 8px 8px;
+  height: 100%;
+  gap: 15px;
 }
 
 #root {
-    -ms-overflow-style: none;
-    scrollbar-width: none;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 .secondary-background {
-    background: var(--framer-color-bg-tertiary);
+  background: var(--framer-color-bg-tertiary);
 }
 
 .framer-border {
-    border-color: var(--framer-color-bg-tertiary);
+  border-color: var(--framer-color-bg-tertiary);
 }
 
 .framer-secondary-border {
-    border-color: var(--framer-color-bg-secondary);
+  border-color: var(--framer-color-bg-secondary);
 }
 
 .framer-bg {
-    background-color: var(--framer-color-bg);
+  background-color: var(--framer-color-bg);
 }
 
 .framer-color-text {
-    color: var(--framer-color-text);
+  color: var(--framer-color-text);
 }
 
 .framer-hover:hover {
-    background-color: var(--framer-color-bg-tertiary);
+  background-color: var(--framer-color-bg-tertiary);
+}
+
+.animblock {
+  display: none;
+  opacity: 0;
+  box-sized: border-box;
+  transition: opacity 0.3s ease, display 0.3s ease allow-discrete;
+
+  &.open {
+    opacity: 1;
+    display: block;
+  }
+}
+
+@starting-style {
+  .animblock.open {
+    opacity: 0;
+  }
 }
