--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Satoshi";
+  src: local("Satoshi"), url("./Satoshi-Medium.otf") format("truetype");
+}
+
 main {
   display: flex;
   flex-direction: column;
@@ -10,6 +15,7 @@ main {
   padding: 0 8px 8px 8px;
   height: 100%;
   gap: 15px;
+  font-family: "Satoshi";
 }
 
 #root {
